examples/test/testpolicy15411.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15411
  namespace: namespace351
spec:
  podSelector:
    matchLabels:
      key42: value13
      key16: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value30
          key42: value32
          key4: value9
      podSelector:
        matchLabels:
          key8: value20
          key15: value16
          key48: value5
